--- a/style.css
+++ b/style.css
@@ -126,6 +126,7 @@ select {
 }
   
 .banner {
+    min-height: 300px;
     background-color: white;
     border-radius: 6px;
     box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.16);   
@@ -146,9 +147,10 @@ select {
     grid-area: cta;
     padding: 30px;
     padding-top: 0px;
-    padding-bottom: 0px;
+    padding-bottom: 30px;
     padding-right: 10px;
-    gap: 20px; 
+    gap: 20px;
+    justify-content: space-between;
 }
 
 .cta-btn {
@@ -157,6 +159,7 @@ select {
     background-color: #E60000;
     border-radius: 6px;
     border: none;
+    display: flex;
     align-items: flex-end;
     text-decoration: none;
     color: white;
@@ -264,17 +267,33 @@ img {
     padding: 20px;
 }
 
-.h1 {
+.card-title {
     font-size: 24px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    max-height: 40px;
+    white-space: nowrap;
 }
 
-.h2 {
+h1 {
+    max-height: 74px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.author {
     font-size: 18px;
 }
 
 .desc {
     font-size: 14px;
     height: 50px;
+}
+
+p {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    max-height: 48px;
 }
 
 .end {
