--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ img {
     grid-area: right-bar;
     background-color: white;
     border-radius: 6px;
-    box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.16);  
+    box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.16);
 }
   
 .cards {  
@@ -242,26 +242,12 @@ img {
     grid-area: card-row;  
 }
 
-.img1 {
-    background-image: url(res/card-image1.jpg);
+.img {
     background-size: cover;
     background-position: center;
     height: 140px;
 }
 
-.img2 {
-    background-image: url(res/card-image2.jpg);
-    background-size: cover;
-    background-position: center;
-    height: 140px;
-}
-
-.img3 {
-    background-image: url(res/card-image3.jpg);
-    background-size: cover;
-    background-position: center;
-    height: 140px;
-}
 
 .title { 
     grid-area: title;
