--- a/style.css
+++ b/style.css
@@ -6,11 +6,10 @@
 html, body {
     height: 100%;
     margin: 0;
-    background-color: #f2f2f2;
     font-family: Vodafone;
 }
 
-.container {  
+.wrapper {  
     height: 100%;
     display: grid;
     grid-template-columns: 240px 1fr 1fr 1fr 1fr;
@@ -32,7 +31,6 @@ html, body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: white;
 }
 
 .logo {
@@ -53,12 +51,6 @@ html, body {
 
 }
 
-.item:hover {
-    color:#E60000;
-    cursor: pointer;
-    fill:#E60000;
-}
-
 .active {
     font-weight: 800;
 }
@@ -74,18 +66,14 @@ html, body {
 
 select {
     height: 48px;
-    border: 1px solid #0D0D0D;
     border-radius: 6px;
     padding: 16px;
-    background: url(res/arrow-down.svg) no-repeat right white;
-    background-origin: content-box;
     -webkit-appearance: none;
     -moz-appearance: none;
 }
 
 .dropdown {
     overflow: hidden;
-
 }
   
 .dashboard {
@@ -123,13 +111,10 @@ select {
 
 .search {
     padding: 0px 16px 0px 16px;
-    background: url(/res/search.svg) no-repeat right white;
-    background-origin: content-box;
 }
   
 .banner {
     min-height: 300px;
-    background-color: white;
     border-radius: 6px;
     box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.16);   
     display: grid;
@@ -158,13 +143,11 @@ select {
 .cta-btn {
     width: 100%;
     height: 44px;
-    background-color: #E60000;
     border-radius: 6px;
     border: none;
     display: flex;
     align-items: flex-end;
     text-decoration: none;
-    color: white;
     line-height: 26px;
     text-align: center;
 }
@@ -177,13 +160,11 @@ input[type=text] {
     width: 242px;
     height: 48px;
     border-radius: 6px;
-    border: 1px solid #CCCCCC;
 }
 
 input[type=text]:focus {
     height: 48px;
     border-radius: 6px;
-    border: 1px solid #CCCCCC;
 }
 
 .image { 
@@ -208,10 +189,6 @@ input[type=text]:focus {
     align-items: flex-end;
 }
 
-.user-role {
-    color: #7E7E7E;
-}
-
 img {
     border-radius: 20px;
     overflow: hidden;
@@ -219,9 +196,7 @@ img {
   
 .right-bar { 
     grid-area: right-bar;
-    background-color: white;
     border-radius: 6px;
-    box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.16);
 }
   
 .cards {  
@@ -335,8 +310,6 @@ p {
 }
 
 .card {
-    background-color: white;
     border-radius: 6px;
-    box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.16);
     overflow: hidden;
 }
